# cato-code

./: .env.example  .gitignore  CLAUDE.md  PHASE1_IMPLEMENTATION_COMPLETE.md  README.md  README_OLD.md  REBRANDING_COMPLETE.md  docker-compose.yml  pyproject.toml
.playwright-cli/: page-2026-03-13T15-23-42-558Z.yml  page-2026-03-13T15-24-01-433Z.yml  page-2026-03-13T15-24-29-805Z.yml  page-2026-03-13T15-32-58-577Z.yml  page-2026-03-13T15-41-26-879Z.yml  page-2026-03-13T15-42-01-979Z.yml  page-2026-03-13T15-43-09-646Z.yml  page-2026-03-13T15-43-40-423Z.yml  page-2026-03-13T15-44-11-882Z.yml  page-2026-03-13T15-45-35-360Z.yml
docker/: Dockerfile  Dockerfile.frontend
docs/: BRAND_ASSETS.md  GIT_IDENTITY_UPDATE.md  REBRANDING_COMPLETE_GUIDE.md  REBRANDING_GUIDE.md  SKILL_ARCHITECTURE.md  SKILL_IMPLEMENTATION_SUMMARY.md
frontend/: .env.example  .env.local.example  .gitignore
scripts/: rebrand_to_catocode.sh
tests/: conftest.py  fakes.py  test_analyze_issue_localization.py  test_auth.py  test_basic.py  test_cli_auth.py  test_code_indexer.py  test_container_worktrees.py  test_context_pipeline_e2e.py  test_dashboard.py  test_db.py  test_dispatcher_cg_runtime.py  test_dispatcher_context.py  test_dispatcher_sessions.py  test_dispatcher_setup.py  test_github_app.py  test_integration.py  test_localization_artifact.py  test_localization_tools.py  test_oauth.py  test_repo_memory_refresh.py  test_resolution_artifact.py  test_resolution_git.py  test_runtime_envelope.py  test_scheduler_runtime_auth.py  test_skill_renderer.py  test_store_code_defs.py  test_store_repo_runtime.py  (+5 more)
(+732 files in other folders)
