[project]
name = "catocode"
version = "0.1.0"
description = "AI-powered GitHub issue reproducer, fixer, and verifier with evidence chains"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
catocode = "catocode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catocode"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
